2007-05-17  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-object-ref.c: when losing the reference to the referenced object, correctly
	respond to users still wanting to know which was the referenced object
	* libgda/gda-init.c: make the default dictionary handle graph objects
	* providers/sqlite/gda-sqlite-provider.c: correct which statement is executed to force 
	SQLite to re-read the database structure
	* libgda/gda-data-model-query.c: avoid showing a warning about
	modification query's param type if expected type is unknown
	* libgda/gda-query.c: display a warning when expanding a table.* field
	into a list of fields when the dictionary is not up to date

2007-05-14  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-value.c: remove warnings in gda_value_stringify() for invalid dates
	* libgda/gda-client.c: correctly implement connection sharing
	* libgda/gda-client.c: correctly emit the "event_notification" signal when a connection is opened, 
	bug #316698
	* libgda/gda-column.c: memory leak correction
	* providers/sqlite/gda-sqlite-provider.c: force SQLite to re-read the database structure
	in case it has been modified by another connection since the last time an SQL statement
	was executed
	
Released 3.0.1

2007-05-01  Vivien Malerba <malerba@gnome-db.org>

	* libsql/lexer.l:
	* libgda/sql-delimiter/lexer.l: add special rule for '\\', 
	for bug #433687 (Armin Burgmeier)
	* tests/queries/basic_sql.xml: add new test cases for bug #433687
	* providers/odbc/gda-odbc-provider.c: applied patch by Gustavo R.
	Montesino for bug #434464

2007-04-26  Vivien Malerba <malerba@gnome-db.org>

	* tools/Makefile.am: minor correction for bug #432798 (due to too much
	cleanup)

2007-04-24  Vivien Malerba <malerba@gnome-db.org>

	* tools/Makefile.am: applied a patch by Leonardo Boshell to fix
	  bug #432798

2007-04-24  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set to version 3.0.1

Released 3.0.0

2007-04-23  Vivien Malerba <malerba@gnome-db.org>
